# django_zendesk

./: .coveragerc  .gitignore  .travis.yml  README.md  models.py  pyproject.toml  readme.txt  requirements.txt  requirements_dev.txt  setup.py  tests.py  tox.ini  views.py
.github/workflows/: main.yml
demo_app/: manage.py
demo_app/demo_app/: asgi.py  settings.py  settings_test.py  urls.py  wsgi.py
demo_app/users/: models.py
django_zendesk/: __init__.py  models.py  test_urls.py  tests.py  views.py
django_zendesk/tests/: __init__.py  test_views.py
